--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,4 +8,5 @@ tqdm==4.66.2
 unstructured==0.13.6
 sentence-transformers==2.7.0
 chromadb==0.5.0
-pysqlite3-binary==0.5.2
+pysqlite3==0.5.2
+#pysqlite3-binary==0.5.2
